[Fix] Datepicker z-index fix

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,3 +8,6 @@
 :root::-webkit-scrollbar {
   display: none; /* Chrome, Safari and Opera */
 }
+.react-datepicker-popper {
+  z-index: 20 !important;
+}
